# oreka

./: .gitignore  .travis.yml  BUILD_C++.txt  BUILD_JAVA.txt  CHANGELOG.txt  README.md  README.txt  VERSION.txt  build-arm.md  oreka.userlibraries  pom.xml  website-upload.sh
.devcontainer/: Dockerfile.orkaudio.build  build-pjsua.sh  build.sh  devcontainer.json  entrypoint.sh  publish.sh
documentation/: oreka-documentation.xml  oreka-user-manual.xml
orkaudio/: .gitignore  App.h  AudioCapturePlugin.h  AudioTape.cpp  AudioTape.h  BUILD.txt  BatchProcessing.cpp  BatchProcessing.h  CapturePluginProxy.cpp  CapturePluginProxy.h  CapturePort.cpp  CapturePort.h  Config.cpp  Config.h  ConfigManager.cpp  ConfigManager.h  Daemon.cpp  Daemon.h  ImmediateProcessing.cpp  ImmediateProcessing.h  LogManager.cpp  LogManager.h  Makefile.am  MultiThreadedServer.cpp  OrkAudio.cpp  OrkAudio.dsp  OrkAudio.dsw  OrkAudio.h  OrkAudio.sln  OrkAudio.vcproj  OrkAudio.vcxproj  OrkAudio_VC12.sln  Reporting.cpp  Reporting.h  ThreadSafeQueue.h  config-linux-template.xml  config-template.xml  configure.in  logging-linux-template.properties  logging-template.properties  (+1 more)
orkaudio/audiocaptureplugins/: Makefile.am
orkaudio/audiocaptureplugins/common/: AcpConfig.cpp  AcpConfig.h  AudioCapturePluginCommon.cpp  AudioCapturePluginCommon.h  DtmfHandling.cpp  DtmfHandling.h  OrkSession.cpp  OrkSession.h  PacketHeaderDefs.cpp  PacketHeaderDefs.h  Rtp.cpp  Rtp.h  SafeBuffer.cpp  SafeBuffer.h  SipTcp.cpp  SipTcp.h
orkaudio/audiocaptureplugins/generator/: Generator.cpp  Generator.dsp  Generator.vcproj  GeneratorConfig.cpp  GeneratorConfig.h  Makefile.am
orkaudio/audiocaptureplugins/sounddevice/: SoundDevice.cpp  SoundDevice.dsp  SoundDevice.vcproj  SoundDeviceConfig.cpp  SoundDeviceConfig.h
orkaudio/audiocaptureplugins/voip/: .gitignore  Iax2Parsers.cpp  Iax2Parsers.h  Iax2Session.cpp  Iax2Session.h  IpFragmentation.cpp  LiveStreamVoIp.cpp  Makefile.am  PacketHeaderDefs.cpp  PacketHeaderDefs.h  ParsingUtils.cpp  ParsingUtils.h  Rtp.cpp  Rtp.h  RtpSession.cpp  RtpSession.h  SipHeaders.cpp  SipHeaders.h  SipParsers.cpp  SipParsers.h  SipSession.cpp  SipSession.h  SipTcp.cpp  SipTcp.h  SipUdp.cpp  SipUdp.h  SkinnyParsers.cpp  SkinnyParsers.h  VoIp.cpp  VoIp.dsp  VoIp.vcproj  VoIp.vcxproj  VoIpConfig.cpp  VoIpConfig.h  VoIpSession.cpp  VoIpSession.h  Win1251.cpp  Win1251.h  g711.h
orkaudio/audiofile/: AudioFile.cpp  AudioFile.h  LibSndFileFile.cpp  Makefile.am  MediaChunkFile.cpp  MediaChunkFile.h  PcmFile.cpp
orkaudio/filters/: Makefile.am
orkaudio/filters/LiveStream/: LiveStream.cpp  LiveStream.h  LiveStreamConfig.cpp  LiveStreamConfig.h  LiveStreamFilter.cpp  LiveStreamFilter.h  LiveStreamServer.cpp  LiveStreamServer.h  LiveStreamServerProxy.cpp  LiveStreamServerProxy.h  LiveStreamSession.cpp  LiveStreamSession.h  LiveStreamVoIp.cpp  Makefile.am  RingBuffer.h  StreamMsg.cpp  StreamMsg.h  json.h  srs_librtmp.cpp
orkaudio/filters/VoIpMixer/: VoIpMixer.cpp  VoIpMixer.dsp
orkaudio/filters/g729codec/: G729Codec.cpp  G729Codec.h  Makefile.am
orkaudio/filters/opuscodec/: Makefile.am  OpusCodec.cpp  OpusCodec.h
orkaudio/filters/rtpmixer/: Makefile.am  RtpMixer.cpp  RtpMixer.dsp  RtpMixer.vcproj  RtpMixer.vcxproj
orkaudio/filters/silkcodec/: Makefile.am  SilkCodec.cpp  SilkCodec.h  SilkCodec.vcxproj
orkaudio/messages/: CaptureMsg.cpp  Makefile.am  PingMsg.cpp  PingMsg.h  TapeMsg.cpp  TapeMsg.h
orkbasecxx/: AudioCapture.cpp  AudioCapture.h  AudioCapturePlugin.h  AudioTape.cpp  AudioTape.h  BatchProcessing.cpp  BatchProcessing.h  CapturePluginProxy.cpp  CapturePluginProxy.h  CapturePort.cpp  CapturePort.h  CommandProcessing.cpp  CommandProcessing.h  Config.cpp  Config.h  ConfigManager.cpp  ConfigManager.h  Daemon.cpp  Daemon.h  DirectionSelector.cpp  DirectionSelector.h  EventStreaming.cpp  EventStreaming.h  Filter.cpp  Filter.h  ImmediateProcessing.cpp  ImmediateProcessing.h  LogManager.cpp  LogManager.h  Makefile.am  Makefile.in  MemUtils.cpp  MemUtils.h  Metrics.cpp  Metrics.h  MultiThreadedServer.cpp  MultiThreadedServer.h  Object.cpp  Object.h  ObjectFactory.cpp  (+40 more)
orkbasecxx/audiofile/: AudioFile.cpp  AudioFile.h  LibSndFileFile.cpp  LibSndFileFile.h  Makefile.am  MediaChunkFile.cpp  MediaChunkFile.h  OggOpusFile.cpp  OggOpusFile.h  PcmFile.cpp  PcmFile.h
orkbasecxx/filters/: Makefile.am
orkbasecxx/filters/audiogain/: AudioGain.cpp  AudioGain.h  Makefile.am
orkbasecxx/filters/g722codec/: G722.h  G722Codec.cpp  G722Codec.h  Makefile.am
orkbasecxx/filters/g726codecs/: G721Codec.cpp  G721Codec.h  Makefile.am
orkbasecxx/filters/g726codecs/g72x/: Makefile.am
orkbasecxx/filters/gsm/: GsmFilters.cpp  GsmFilters.h  Makefile.am
orkbasecxx/filters/gsm/gsm610/: Makefile.am  add.c  code.c  config.h  cscope.out  decode.c  gsm.h  gsm610_priv.h  gsm_create.c  gsm_decode.c  gsm_destroy.c  gsm_encode.c  gsm_option.c  long_term.c  lpc.c  preprocess.c  rpe.c  short_term.c  table.c
orkbasecxx/filters/ilbc/: IlbcFilters.cpp  IlbcFilters.h  Makefile.am
orkbasecxx/filters/ilbc/ilbc/: Makefile.am  rfc3951.txt
orkbasecxx/filters/opuscodec/: Makefile.am  OpusCodec.cpp  OpusCodec.h
orkbasecxx/filters/speex/: Makefile.am  SpeexCodec.cpp  SpeexCodec.h
orkbasecxx/messages/: AddTagMsg.cpp  AddTagMsg.h  AsyncMessage.cpp  AsyncMessage.h  CaptureMsg.cpp  CaptureMsg.h  CrashMessage.cpp  CrashMessage.h  DeleteTapeMsg.cpp  DeleteTapeMsg.h  InitMsg.cpp  InitMsg.h  Makefile.am  Makefile.in  Message.cpp  Message.h  OrkaudioVersionMsg.cpp  OrkaudioVersionMsg.h  PingMsg.cpp  PingMsg.h  ReadLoggingPropertiesMsg.cpp  ReadLoggingPropertiesMsg.h  RecordMsg.cpp  RecordMsg.h  SyncMessage.cpp  SyncMessage.h  TapeMsg.cpp  TapeMsg.h  TestMsg.cpp  TestMsg.h
orkbasecxx/serializers/: DomSerializer.cpp  DomSerializer.h  Makefile.am  Makefile.in  Serializer.cpp  Serializer.h  SingleLineSerializer.cpp  SingleLineSerializer.h  UrlSerializer.cpp  UrlSerializer.h  XmlRpcSerializer.cpp  XmlRpcSerializer.h
orkbasej/: .classpath  .gitignore  .project  build.xml  pom.xml
orktrack/: .classpath  .gitignore  .project  deploy-template.xml  (+3 more)
(+302 files in other folders)
