AC_INIT(configure.in)

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(orkaudio, 1.0)
 
AC_LANG_CPLUSPLUS
AC_PROG_CXX

speex_lib=speex


# Check if gcc supports cpp11
if [echo "int main(){}" | $CXX -std=c++11 -xc++ -S -  &>/dev/null] ; then
	CXXFLAGS+=" -std=c++11 -DSUPPORTS_CPP11 -fPIC"
	LDFLAGS+=" -ldl"
else
	AC_MSG_FAILURE("Compiler must support C++ 11")
fi

# don't support TLS under Centos 6
if [! grep "release 6" /etc/redhat-release]; then
    CXXFLAGS+=" -DSUPPORT_TLS_SERVER -DSUPPORT_TLS_CLIENT"
fi

if [ egrep -i "release [67]" /etc/redhat-release ]; then
	speex_lib=orkspeex
fi

AM_PROG_LIBTOOL

AC_PREFIX_DEFAULT(/usr)

AC_SUBST(speex_lib,$speex_lib)
	
AC_OUTPUT(Makefile audiocaptureplugins/Makefile audiocaptureplugins/generator/Makefile audiocaptureplugins/voip/Makefile filters/Makefile filters/rtpmixer/Makefile filters/silkcodec/Makefile)

echo ""
echo "========= Configuration ==========="
echo ""
echo "     cxx : $CXX"
echo "cxxflags : $CXXFLAGS"
echo " ldflags : $LDFLAGS"
echo "   speex : $speex_lib"
echo ""
echo "==================================="
