
AC_INIT([orkaudio], [1.0])
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE([subdir-objects])

speex_lib=orkspeex

if [cat /etc/issue | grep Ubuntu]; then
	speex_lib=speex
	CXXFLAGS+="-std=c++11"
fi

if [ grep -i opensuse /etc/os-release ]; then
	speex_lib=speex
	CXXFLAGS+="-std=c++11"
fi

if [grep "release 5" /etc/redhat-release]; then
    CXXFLAGS+="-DCENTOS_5"
fi

AC_LANG_CPLUSPLUS
AC_PROG_CXX([g++])
AM_PROG_LIBTOOL

# Check if gcc supports cpp11
if [echo "main(){}" | $CXX -std=c++11 -xc++ -S -  &>/dev/null] ; then
	CXXFLAGS+=" -g -O2 -fno-inline-functions -std=c++11 -DSUPPORTS_CPP11 -fPIC"
	LDFLAGS+=" -ldl"
else
	CXXFLAGS+=" -g -O2 -fno-inline-functions"
fi

AC_SEARCH_LIBS([dwarf_begin],[dw],[][
	LDFLAGS+=" -ldw"
], AC_MSG_ERROR([libdw is not installed.]))

AC_SEARCH_LIBS([unw_backtrace],[unwind],[][
	LDFLAGS+=" -lunwind"
], AC_MSG_ERROR([libunwind is not installed.]))

AC_PREFIX_DEFAULT(/usr)

AC_SUBST(speex_lib,$speex_lib)
	
AC_OUTPUT(Makefile audiocaptureplugins/Makefile audiocaptureplugins/generator/Makefile audiocaptureplugins/voip/Makefile filters/Makefile filters/rtpmixer/Makefile filters/silkcodec/Makefile filters/g729codec/Makefile)

echo ""
echo "========= Configuration ==========="
echo ""
echo "     cxx : $CXX"
echo "cxxflags : $CXXFLAGS"
echo " ldflags : $LDFLAGS"
echo "   speex : $speex_lib"
echo ""
echo "==================================="
