AC_INIT(configure.in)

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(orkbase, 1.0)

AC_ARG_ENABLE( [tsan],
	AS_HELP_STRING([--enable-tsan], [enable thread sanitizer])
)
AC_ARG_ENABLE( [tsan],
	AS_HELP_STRING([--enable-asan], [enable address sanitizer])
)

boost_lib=-lboost_system

AC_PREFIX_DEFAULT(/usr)

AC_LANG_CPLUSPLUS
AC_PROG_CXX

AS_IF([test "x$enable_tsan" = "xyes"], [
	CXXFLAGS+=" -fsanitize=thread "
	LDFLAGS+=" -fsanitize=thread "
])

AS_IF([test "x$enable_asan" = "xyes"], [
	CXXFLAGS+=" -fsanitize=address "
	LDFLAGS+=" -fsanitize=address "
])

# look for XERCES_3
AC_CHECK_HEADERS([/usr/include/xercesc/dom/DOMLSSerializer.hpp],[CXXFLAGS+=" -DXERCES_3 "])

if [grep "release 7" /etc/redhat-release]; then
    boost_lib=/usr/lib64/static_libboost_system.a
fi

# don't support TLS under Centos 6
if [! grep "release 6" /etc/redhat-release]; then
    CXXFLAGS+=" -DSUPPORT_TLS_SERVER -DSUPPORT_TLS_CLIENT"
fi

if [cat /etc/redhat-release | grep "release 6"]; then
    CXXFLAGS+=" -DCENTOS_6 -D__STDC_CONSTANT_MACROS"
    boost_lib=
fi

AC_SUBST(boost_lib,$boost_lib)

# Check if gcc supports cpp11 
if [echo "int main(){}" | $CXX -std=c++11 -xc++ -S -  &>/dev/null]; then 
	CXXFLAGS+=" -std=c++11 -DSUPPORTS_CPP11 -fPIC"
else	
	AC_MSG_FAILURE("Compiler must support C++ 11")
fi


AM_PROG_LIBTOOL

AC_OUTPUT(Makefile messages/Makefile serializers/Makefile audiofile/Makefile filters/Makefile filters/gsm/Makefile filters/gsm/gsm610/Makefile filters/ilbc/Makefile filters/ilbc/ilbc/Makefile filters/audiogain/Makefile filters/g722codec/Makefile filters/speex/Makefile filters/g726codecs/Makefile filters/g726codecs/g72x/Makefile filters/opuscodec/Makefile)


echo ""
echo "========= Configuration ==========="
echo ""
echo "     cxx : $CXX"
echo "cxxflags : $CXXFLAGS"
echo "boost_lib: $boost_lib"
echo ""
echo "==================================="
