METASOURCES = AUTO
noinst_LTLIBRARIES = libilbcrfc.la
libilbcrfc_la_SOURCES =  anaFilter.c iCBSearch.c packing.c \
	constants.c gainquant.c iLBC_decode.c StateConstructW.c \
	createCB.c getCBvec.c iLBC_encode.c StateSearchW.c doCPLC.c \
	helpfun.c syntFilter.c enhancer.c hpInput.c LPCdecode.c \
	iLBC_filter.c hpOutput.c LPCencode.c FrameClassify.c  iCBConstruct.c lsf.c

INCLUDES = -I@top_srcdir@
AM_CFLAGS = -D_REENTRANT
